--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8232 2009/07/08 19:37:44 tron Exp $
+$NetBSD: TODO,v 1.8233 2009/07/08 20:06:07 hasso Exp $
 
 Suggested new packages
 ======================
@@ -346,8 +346,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o GridSim-3.3
 	o GutenMark-20090216
 	o MAMEDiff-2.30
-	o Mesa-7.4.4 [hasso]
-	o MesaLib-7.4.4 [hasso]
 	o PAM-0.99.7.1
 	o R-2.8.1
 	o REminiscence-0.1.9
