--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8236 2009/07/09 08:11:14 wiz Exp $
+$NetBSD: TODO,v 1.8237 2009/07/09 10:44:11 tron Exp $
 
 Suggested new packages
 ======================
@@ -883,7 +883,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libtcl-nothread-8.5.1
 	o libtool-2.2.6a
 	o libtool-base-2.2.6a
-	o libtorrent-0.12.4
 	o libunique-1.0.8
 	o libv4l-0.5.99
 	o libvorbis-1.2.2
@@ -1207,7 +1206,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o rsnapshot-1.3.1
 	o rt-3.8.2
 	o rtcw-1.41.3
-	o rtorrent-0.8.4
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
 	o rubigen-1.5.2
 	o ruby-1.9.1.129 (Ruby 1.9.1-p129)
