--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8237 2009/07/09 10:44:11 tron Exp $
+$NetBSD: TODO,v 1.8238 2009/07/09 11:31:43 obache Exp $
 
 Suggested new packages
 ======================
@@ -1430,7 +1430,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o wxRemind-101
 	o wyrd-1.4.4
 	o x11perf-1.5
-	o x11vnc-0.9.8
 	o x264-devel-20090620
 	o xanalyser-1.30
 	o xapian-1.0.13
