--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8239 2009/07/09 11:54:39 obache Exp $
+$NetBSD: TODO,v 1.8240 2009/07/09 22:17:02 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -771,7 +771,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ifile-1.3.8
 	o ifp-line-0.3 [pkg/38038]
 	o ike-2.0.1 [pkg/37032]
-	o ikiwiki-3.1415 [schmonz]
 	o imapproxy-1.2.5 [see http://horde.org/imapproxy/ -> www.imapproxy.org]
 	o inputproto-1.5.1
 	o instiki-0.13
