vala-0.7.4 is in pkg/41676.

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8240 2009/07/09 22:17:02 schmonz Exp $
+$NetBSD: TODO,v 1.8241 2009/07/10 09:24:42 obache Exp $
 
 Suggested new packages
 ======================
@@ -1382,7 +1382,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o upx-2.90
 	o uriparser-0.7.5
 	o userppp-030706
-	o vala-0.7.4
+	o vala-0.7.4 [pkg/41676]
 	o valgrind-3.4.1
 	o varnish-2.0.4 [pkg/41118]
 	o vera-1.17
