--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8242 2009/07/10 09:26:26 obache Exp $
+$NetBSD: TODO,v 1.8243 2009/07/10 11:10:39 tron Exp $
 
 Suggested new packages
 ======================
@@ -441,7 +441,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o bind-9.6.1
 	o binutils-2.19.1
 	o bioperl-1.5.0
-	o bittorrent-5.0.5
 	o blender-2.49
 	o bluefish-1.3.5
 	o blur6ex-0.3.462
