--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8247 2009/07/11 08:06:15 obache Exp $
+$NetBSD: TODO,v 1.8248 2009/07/12 16:32:29 dholland Exp $
 
 Suggested new packages
 ======================
@@ -1306,8 +1306,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ssh-askpass-1.2.4.1
 	o star-1.5
 	o statist-1.3.0
-	o stella-2.8.1 [dholland]
-	o stella-2.8.4
 	o stlport-4.6.2
 	o strace-4.5.16
 	o stratagus-2.2.2
