--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8250 2009/07/12 19:02:17 wiz Exp $
+$NetBSD: TODO,v 1.8251 2009/07/14 10:34:34 tnn Exp $
 
 Suggested new packages
 ======================
@@ -860,7 +860,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libntlm-1.1
 	o libogg-1.1.4
 	o libole2-2.2.8
-	o librep-0.90.0
 	o libshout-2.2.2 [pkg/41468]
 	o libssh-0.3
 	o libssh2-1.1
@@ -1173,7 +1172,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o redland-1.0.9
 	o regionset-0.2
 	o remind-3.1.7
-	o rep-gtk-0.18.6r2
 	o resize_image-0.7
 	o rhythmbox-0.12.3
 	o rio500-0.8.1
@@ -1240,7 +1238,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o samba-3.3.6
 	o sane-backends-1.0.20
 	o sarg-2.2.5
-	o sawfish-1.5.0
 	o sbcl-1.0.29
 	o scamper-20070201
 	o scew-0.4.0
