Update shntool to 3.0.10; changelog since 2.0.3 below:
version 3.0.10 (2009-03-30)
  + cat mode: fixed bug that prevented use of the -d option
  + cat mode [win32]: properly write WAVE data to the terminal
  + conv mode [win32]: properly read WAVE data from the terminal

version 3.0.9 (2009-03-18)
  + allow fix mode to fix (essentially postpad) just one file, which is useful
    when using the -c option to check for boundary issues
  + added new global -F option to specify a file containing input filenames
    (most modes will now accept input filenames from a single source, using the
     following order of precedence: file specified by -F option, otherwise
     filenames on the command line, otherwise filenames read from the terminal)

version 3.0.8 (2008-08-27)
  + added new -a option to show default encoder/decoder arguments
  + fixed bug when prompting for overwrite action when stdin was
    already at EOF on certain platforms (e.g. OS X)
  + split mode: handle CUE sheets that contain Unicode BOMs
  + wv format: support self-extracting WavPack files

version 3.0.7 (2008-03-02)
  + support for TAK decoding (requires TAK 1.0.4+)
  + updated MPEG-4 ALS to version RM20, and added output support
  + removed detection of unsupported formats RKAU and WMA

version 3.0.6 (2007-12-16)
  + support for TAK encoding (requires TAK 1.0.3+)

version 3.0.5 (2007-10-22)
  + hash mode: show progress indicators
  + cmp mode: new -c option to specify size of byte-shift comparison buffer

version 3.0.4 (2007-09-07)
  + no longer ignore raw WavPack files (wvunpack creates WAVE header for us)
  + support for TTA 3.4.x as well as TTA encoding
  + fixed display bug in joined mode when input files were not CD-quality
  + split mode: new -m option to allow character manipulation of CUE filenames

version 3.0.3 (2007-06-01)
  + improved use of exit codes
  + mkw format: removed deprecated input kluge
  + split mode: override path separation characters in CUE-generated files

version 3.0.2 

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8252 2009/07/14 18:21:58 tonio Exp $
+$NetBSD: TODO,v 1.8253 2009/07/14 18:55:59 rafal Exp $
 
 Suggested new packages
 ======================
@@ -1259,7 +1259,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o sharity-light-1.3
 	o shc-3.8
 	o shmux-1.0.2
-	o shntool-3.0.8
 	o sign-1.0.7
 	o silc-server-1.1.15
 	o silc-toolkit-2.1.9
