--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8253 2009/07/14 18:55:59 rafal Exp $
+$NetBSD: TODO,v 1.8254 2009/07/15 08:55:34 wiz Exp $
 
 Suggested new packages
 ======================
@@ -453,7 +453,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o boolean-6.99
 	o bos-2.5
 	o boson-0.13
-	o botan-1.8.3
+	o botan-1.8.4
 	o brasero-2.26.3
 	o bugzilla-3.2.4
 	o byacc-20080824
@@ -472,7 +472,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o cdparanoia-3.0.10.2
 	o cdrtools-2.01.01alpha61
 	o cfitsio-3181
-	o cflow-1.2
+	o cflow-1.3
 	o cgdb-0.6.4
 	o cgicc-3.2.7
 	o cheese-2.26.3
@@ -519,7 +519,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o dc_gui2-0.80
 	o dctc-0.85.9
 	o ddclient-3.7.3
-	o ddrescue-1.10
+	o ddrescue-1.11
 	o defendguin-0.0.11
 	o delegate-9.9.3
 	o devIL-1.7.8
@@ -543,13 +543,14 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o drupal-5.19 (security release)
 	o drupal-6.13 (security release)
 	o dspam-3.9.0
-	o dvdstyler-1.7.2
+	o dvdstyler-1.7.2 [pkg/41681]
 	o dvipng-1.12
+	o dwm-5.6
 	o eagle-4.16
 	o easymenu-0.7.2p1
 	o ec-fonts-mftraced-1.0.12
 	o eclipse-3.2.0
-	o ed-1.3
+	o ed-1.4
 	o ede-2.0
 	o edonkeyclc-1.0.2 [replaces net/edonkey2k]
 	o eet-1.2.1
@@ -612,7 +613,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o fondu-040927
 	o fontconfig-2.7.0
 	o fop-0.20.5
-	o fotoxx-7.3
+	o fotoxx-7.5
 	o freeciv-2.1.9
 	o freeglut-2.4.0
 	o freenet-0.7
@@ -760,7 +761,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ifp-line-0.3 [pkg/38038]
 	o ike-2.0.1 [pkg/37032]
 	o imapproxy-1.2.5 [see http://horde.org/imapproxy/ -> www.imapproxy.org]
-	o inputproto-1.5.1
+	o inputproto-1.9.99.14
 	o instiki-0.13
 	o intercal-0.24
 	o ircservices-5.1.18
@@ -822,6 +823,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libFS-1.0.2
 	o libX11-1.2.2
 	o libXaw-1.0.6
+	o libXi-1.2.99.2
 	o libXt-1.0.6
 	o libarchive-2.7.0
 	o libast-0.7
@@ -861,7 +863,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libogg-1.1.4
 	o libole2-2.2.8
 	o libshout-2.2.2 [pkg/41468]
-	o libssh-0.3
+	o libssh-0.3.1
 	o libssh2-1.1
 	o libstree-0.4.2
 	o libtasn1-2.2
@@ -1081,6 +1083,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o pinfo-0.6.9
 	o pioneers-0.12.2
 	o pircbot-1.4.4
+	o pixman-0.15.16
 	o pks-0.9.6
 	o plone-3.2.2 [should be plone-32?]
 	o ploticus-2.41
@@ -1115,7 +1118,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-FourSuite-1.0.2
 	o py-Gnosis-Utils-1.2.1
 	o py-HappyDoc-3.0
-	o py-Optik-1.4.1
+	o py-Optik-1.5.3 [pkg/41674]
 	o py-Scientific-2.5.5
 	o py-Scientific-doc-2.5.5
 	o py-TPG-3.0.5
@@ -1133,7 +1136,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-gnosis-utils-1.2.1
 	o py-gnutls-0.2.1
 	o py-kenosis-0.96
-	o py-logging-0.4.9.6
+	o py-logging-0.4.9.6 [pkg/41675]
 	o py-lxml-2.2.2
 	o py-m2crypto-0.19.1
 	o py-mad-0.6
@@ -1142,6 +1145,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-mutagen-1.15
 	o py-psycopg-2.0.11
 	o py-pytz-2009j
+	o py-qt4-4.5.2
 	o py-setuptools-0.6
 	o py-subversion-1.6.3
 	o py-sybase-0.37
@@ -1171,6 +1175,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o redland-1.0.9
 	o regionset-0.2
 	o remind-3.1.7
+	o renderproto-0.11
 	o resize_image-0.7
 	o rhythmbox-0.12.3
 	o rio500-0.8.1
@@ -1293,6 +1298,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ssh-askpass-1.2.4.1
 	o star-1.5
 	o statist-1.3.0
+	o stella-2.8.4a
 	o stlport-4.6.2
 	o strace-4.5.16
 	o stratagus-2.2.2
@@ -1300,6 +1306,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o subtitleeditor-0.33.0
 	o subversion-1.6.3
 	o subversion-base-1.6.3
+	o sudo-1.7.2
 	o suse_base-11.0
 	o swi-prolog-5.6.31
 	o sysinfo-4.2.2
@@ -1466,7 +1473,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o xm7-1020s
 	o xmbdfed-4.6
 	o xmcd-3.3.2
-	o xmlsec1-1.2.11
+	o xmlsec1-1.2.12
 	o xmms-crossfade-0.3.14
 	o xmms-dflowers-1.2.1
 	o xmms-dspectogram-1.2.1
