--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8255 2009/07/15 12:27:31 kefren Exp $
+$NetBSD: TODO,v 1.8256 2009/07/16 16:13:59 jakllsch Exp $
 
 Suggested new packages
 ======================
@@ -503,7 +503,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o cross-h8300-hms-binutils-2.17
 	o cryptopp-5.6.0
 	o cssc-1.2.0
-	o cuetools-1.3.1
 	o cups-1.3.11
 	o cvs2p4-2.5.5 [schmonz]
 	o cvsd-1.0.16
