--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8256 2009/07/16 16:13:59 jakllsch Exp $
+$NetBSD: TODO,v 1.8257 2009/07/16 19:23:44 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -759,6 +759,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ifile-1.3.8
 	o ifp-line-0.3 [pkg/38038]
 	o ike-2.0.1 [pkg/37032]
+	o ikiwiki-3.14159 [schmonz]
 	o imapproxy-1.2.5 [see http://horde.org/imapproxy/ -> www.imapproxy.org]
 	o inputproto-1.9.99.14
 	o instiki-0.13
