--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8257 2009/07/16 19:23:44 schmonz Exp $
+$NetBSD: TODO,v 1.8258 2009/07/16 20:25:06 tonio Exp $
 
 Suggested new packages
 ======================
@@ -956,7 +956,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o munin-1.3.4
 	o muse-0.9.2
 	o musicpd-0.15
-	o mutt-devel-1.5.20
 	o mysql-5.1.34
 	o mysql-5.2.3
 	o mysql5-client-5.0.83
