--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8260 2009/07/18 06:06:23 tonio Exp $
+$NetBSD: TODO,v 1.8261 2009/07/18 10:54:07 wiz Exp $
 
 Suggested new packages
 ======================
@@ -427,9 +427,9 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o avl-2.0.2a
 	o avr-binutils-2.17
 	o avr-libc-1.4.5
-	o avrdude-5.3.1
+	o avrdude-5.8 [pkg/41750]
 	o awesome-3.3.1
-	o babl-0.1.0 [wait for gegl-0.1.0]
+	o babl-0.1.0
 	o baci-20040415
 	o balance-3.42
 	o bbdb-2.35
@@ -470,7 +470,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o cdif-1.19
 	o cdlabelgen-4.1.0
 	o cdparanoia-3.0.10.2
-	o cdrtools-2.01.01alpha61
 	o cfitsio-3181
 	o cflow-1.3
 	o cgdb-0.6.4
@@ -598,7 +597,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o festival-1.96
 	o felt-3.07
 	o fetchyahoo-2.13.0
-	o ffmpeg-0.5
 	o fftw-3.2.2
 	o fillets-ng-0.7.4
 	o fillets-ng-data-0.7.4
@@ -711,6 +709,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gtexinfo-4.13
 	o gtick-0.4.2
 	o gtk-systrace-20030623
+	o gtk2-2.16.5
 	o gtkglarea-2.0.0
 	o gtkimageview-1.6.4
 	o gtkmm-documentation-2.16.0 [GNOME 2.26]
@@ -725,7 +724,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gutenprint-5.2.2
 	o gv-3.6.7
 	o gwaei-1.0
-	o gxemul-0.4.7.1
+	o gxemul-0.4.7.2 [pkg/41742]
 	o hackbot-2.21
 	o hal-0.5.12
 	o hamster-applet-2.26.3
@@ -821,12 +820,8 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o leafpad-0.8.15
 	o less-429
 	o lft-2.5 [at http://pwhois.org/]
-	o libFS-1.0.2
-	o libX11-1.2.2
-	o libXaw-1.0.6
 	o libXext-1.0.99.3
 	o libXi-1.2.99.2
-	o libXt-1.0.6
 	o libarchive-2.7.0
 	o libast-0.7
 	o libcanberra-0.14
@@ -861,7 +856,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libmusicbrainz-3.0.1
 	o libnasl-2.3.1
 	o libntlm-1.1
-	o libogg-1.1.4
 	o libole2-2.2.8
 	o libshout-2.2.2 [pkg/41468]
 	o libssh-0.3.1
@@ -873,7 +867,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libtool-base-2.2.6a
 	o libunique-1.0.8
 	o libv4l-0.6.0
-	o libvorbis-1.2.3
 	o libxcb-1.4
 	o libxklavier-4.0
 	o licq-1.3.6
@@ -925,7 +918,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o merb-sequel-1.0.0
 	o merb-stories-0.9.13
 	o merb-test-unit-0.9.13
-	o mercurial-1.3
 	o mercury-0.13.1
 	o mergeant-0.67
 	o mesure-0.7.2
@@ -951,6 +943,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o mpc-0.16
 	o mpeg4ip-1.6.1
 	o mpg123-1.8.1
+	o mpich-1.4
 	o mpop-1.0.17
 	o mserv-devel-0.41
 	o msf-2.7
@@ -989,6 +982,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o newt-0.52.2 (ubuntu)
 	o ng-1.4.4
 	o nikto-2.0.1
+	o ns-3.5
 	o ns-flash-10
 	o ns-plugger-common-5.1.3
 	o ns-plugger-communicator-5.1.3
@@ -1032,7 +1026,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o p5-Module-Build-0.34000
 	o p5-WWW-Curl-4.09
 	o p5-ispman-1.2
-	o p5-libwww-5.829
 	o p5-sybperl-2.18
 	o p5-xmltv-0.5.55
 	o packagekit-0.4.8
@@ -1082,7 +1075,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o pinfo-0.6.9
 	o pioneers-0.12.2
 	o pircbot-1.4.4
-	o pixman-0.15.16
 	o pks-0.9.6
 	o plone-3.2.2 [should be plone-32?]
 	o ploticus-2.41
@@ -1090,7 +1082,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o plotutils-2.5
 	o plptools-0.13 [pkg/30244]
 	o plptools-1.0.8
-	o png-1.2.38
 	o pngcheck-2.3.0
 	o pngcrush-1.6.20
 	o po4a-0.29
@@ -1162,13 +1153,12 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o qnetwalk-1.3
 	o qpopper-4.0.14
 	o qt3-qscintilla-2.4
-	o qt4-libs-4.5.2
 	o qvplay-0.95
 	o radiance-3.7.2
 	o raine-0.51.3
 	o ramaze-2009.01
 	o randread-0.2
-	o rapidsvn-0.9.8
+	o rapidsvn-0.10
 	o rat-4.2.25
 	o rayshade-4.0.6
 	o rc-1.7.1 [at ftp://quenix2.dyndns.org/FreeBSD/ports/distfiles/]
@@ -1356,6 +1346,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o totem-2.26.3
 	o tpasm-1.2
 	o tpb-0.6.4
+	o trac-0.11.5
 	o transcode-1.1.2
 	o trio-1.12
 	o tripwire-2.3.1 [see also pkg/22362]
