--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8262 2009/07/18 16:55:30 zafer Exp $
+$NetBSD: TODO,v 1.8263 2009/07/18 22:29:20 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -1414,8 +1414,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o x11perf-1.5
 	o x264-devel-20090620
 	o xanalyser-1.30
-	o xapian-1.0.13
-	o xapian-omega-1.0.13
 	o xaric-0.13.2
 	o xbindkeys-1.8.3
 	o xbindkeys-tk-1.8.0
