--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8263 2009/07/18 22:29:20 schmonz Exp $
+$NetBSD: TODO,v 1.8264 2009/07/19 00:35:09 asau Exp $
 
 Suggested new packages
 ======================
@@ -1000,7 +1000,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ocamlduce-3.11.1.0 [pkg/41696]
 	o ocamlnet-2.2.4
 	o ocsigen-1.1.0 [pkg/40761]
-	o octave-3.2.0
 	o odbc-postgresql-8.2.3
 	o offlineimap-6.0.3
 	o ogre-0.12.3
