--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8265 2009/07/19 06:47:04 obache Exp $
+$NetBSD: TODO,v 1.8266 2009/07/19 11:00:33 sno Exp $
 
 Suggested new packages
 ======================
@@ -1021,8 +1021,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o oto-0.5
 	o otpCalc-0.97
 	o p5-BerkeleyDB-0.39
-	o p5-Module-Build-0.34000
-	o p5-WWW-Curl-4.09
 	o p5-ispman-1.2
 	o p5-sybperl-2.18
 	o p5-xmltv-0.5.55
