--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8266 2009/07/19 11:00:33 sno Exp $
+$NetBSD: TODO,v 1.8267 2009/07/19 12:11:07 zafer Exp $
 
 Suggested new packages
 ======================
@@ -748,7 +748,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o html2wml-0.4.11
 	o htop-0.8.3
 	o http_load-20060312
-	o httping-1.3.0
 	o httptunnel-3.3
 	o hydrogen-0.9.3 [pkg/37424]
 	o hylafax-5.2.9
@@ -1270,7 +1269,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o snd-10.6
 	o snes9x-1.51
 	o snort-2.8.4
-	o socat-1.7.1.1
 	o solfege-3.14.5
 	o sope-4.6
 	o soprano-2.2.3
@@ -1500,14 +1498,12 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o yasm-0.8.0
 	o yaz-3.0.46
 	o yodl-2.14.3
-	o youtube-dl-20090629
 	o ysm-2.9.9.1
 	o yudit-2.9.0
 	o yorick-2.1.05
 	o zebra-0.95a
 	o zenicb-1.31 (needs merge with lots of local changes)
 	o zephyr-20070719
-	o zile-2.3.9
 	o zircon-1.18.256
 	o zoom-1.1.3
 	o zope-3.4.0
