--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8267 2009/07/19 12:11:07 zafer Exp $
+$NetBSD: TODO,v 1.8268 2009/07/19 22:30:20 dholland Exp $
 
 Suggested new packages
 ======================
@@ -1283,7 +1283,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ssh-askpass-1.2.4.1
 	o star-1.5
 	o statist-1.3.0
-	o stella-2.8.4a
 	o stlport-4.6.2
 	o strace-4.5.16
 	o stratagus-2.2.2
