--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8268 2009/07/19 22:30:20 dholland Exp $
+$NetBSD: TODO,v 1.8269 2009/07/20 09:29:51 wiz Exp $
 
 Suggested new packages
 ======================
@@ -346,6 +346,8 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o GridSim-3.3
 	o GutenMark-20090216
 	o MAMEDiff-2.30
+	o Mesa-7.5
+	o MesaLib-7.5
 	o PAM-0.99.7.1
 	o R-2.8.1
 	o REminiscence-0.1.9
@@ -403,7 +405,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o aqsis-1.4.1
 	o aranym-0.9.7
 	o argtable-2.9
-	o aria2-1.4.1
+	o aria2-1.5.0
 	o arla-0.90
 	o arnold-20040104
 	o asapm-3.1
@@ -458,8 +460,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o byacc-20080824
 	o c4-1.10 [schmonz]
 	o cadaver-0.23.0
-	o cairo-1.8.8
-	o cairomm-1.8.2
 	o cal3d-0.11.0
 	o calamaris-2.59
 	o capc-calc-2.12.4
@@ -483,7 +483,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o classpath-0.98
 	o claws-mail-3.7.2
 	o climm-0.6.4
-	o clive-2.2.1
 	o clutter-0.9.6
 	o cocoon-2.1.10
 	o colorize-0.3.4
@@ -511,7 +510,8 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o dar-2.3.9
 	o darcs-2.1.2
 	o dbench-4.0
-	o dbus-1.2.14 [don't update until https://bugs.freedesktop.org/show_bug.cgi?id=18980 is fixed]
+	o dbus-1.2.16 [don't update until https://bugs.freedesktop.org/show_bug.cgi?id=18980 is fixed]
+	o dbus-glib-0.82
 	o dbxml-2.1.8
 	o dc_gui2-0.80
 	o dctc-0.85.9
@@ -525,7 +525,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o dia-0.97
 	o diffstat-1.47
 	o diffuse-0.3.4
-	o digikam-0.9.6
 	o dinotrace-9.3e
 	o dinotrace-mode-9.3e
 	o dirac-1.0.2
@@ -637,7 +636,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gdeskcal-1.01
 	o gdm-2.26.1 [GNOME 2.26]
 	o gdsreader-0.3.2
-	o geany-0.17
 	o geda-1.5.2.20090328
 	o gedit-plugins-2.26.1 [GNOME 2.26]
 	o geeqie-1.0beta2
@@ -652,7 +650,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ghostscript-esp-8.15.3
 	o gifsicle-1.48
 	o gimp-docs-2.4.2
-	o gindent-2.2.9
 	o gkrellm-2.3.1
 	o gkrellm-multiping-2.0.13
 	o gkrellm-snmp-1.0
@@ -665,7 +662,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o global-5.7.3
 	o glom-1.10.0 [GNOME 2.26]
 	o glpk-4.37
-	o gmime-2.4.7
 	o gmp-4.3.1
 	o gnash-0.8.5
 	o gnet1-1.1.9
@@ -673,6 +669,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gnome-mag-0.15.7
 	o gnome-packagekit-0.4.5
 	o gnome-power-manager-2.26.3 [GNOME 2.26, wants DeviceKit-power]
+	o gnome-subtitles-0.9.1
 	o gnome-user-share-2.26.0 [GNOME 2.26]
 	o gnome-web-photo-0.6 [GNOME 2.26]
 	o gnomeicu-0.99.14
@@ -681,7 +678,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gnugo-3.8
 	o gnupg2-2.0.12
 	o gnustep-base-1.19.1
-	o gnutls-2.8.1
 	o gobo-eiffel-3.3 [does not work with smarteiffel-2.0; perhaps 2.1?]
 	o gocr-0.43
 	o gogo-3.11p1
@@ -708,8 +704,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gtexinfo-4.13
 	o gtick-0.4.2
 	o gtk-systrace-20030623
-	o gtk2-2.16.5
-	o gtkglarea-2.0.0
+	o gtkglarea-2.0.1
 	o gtkimageview-1.6.4
 	o gtkmm-documentation-2.16.0 [GNOME 2.26]
 	o gtkyahoo-0.18.3
@@ -725,7 +720,8 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gwaei-1.0
 	o gxemul-0.4.7.2 [pkg/41742]
 	o hackbot-2.21
-	o hal-0.5.12
+	o hal-0.5.13
+	o hal-info-20090716
 	o hamster-applet-2.26.3
 	o hanzim-2.4
 	o haskell-mode-1.45
@@ -830,6 +826,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libdaemon-0.13
 	o libdiscid-0.2.1
 	o libdockapp-0.6.1
+	o libdrm-2.4.12
 	o libelf-0.8.12
 	o libevent-1.4.11
 	o libextractor-0.5.23
@@ -859,7 +856,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libssh-0.3.1
 	o libssh2-1.1
 	o libstree-0.4.2
-	o libtasn1-2.2
 	o libtcl-nothread-8.5.1
 	o libtool-2.2.6a
 	o libtool-base-2.2.6a
@@ -892,7 +888,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o mapserver-5.0.0
 	o maradns-1.2.12.09
 	o matchbox-panel-0.9.3
-	o mathomatic-14.5.0
+	o mathomatic-14.5.2
 	o mc-4.6.2
 	o mediawiki-1.5.0
 	o memconf-2.9 [pkg/40201]
@@ -925,7 +921,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o mimedefang-2.67
 	o mined-2000.15.4
 	o minivmac-3.0.4
-	o miredo-1.1.6
+	o miredo-1.1.7
 	o mirmon-1.37
 	o mknmz-wwwoffle-0.7.2
 	o mkvtoolnix-2.9.7
@@ -936,7 +932,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o moserial-2.26.3 [GNOME 2.26]
 	o mousetweaks-2.26.3
 	o mp3blaster-3.2.3
-	o mp3diags-0.99.03.022
+	o mp3diags-0.99.04.026
 	o mp3splt-2.2.5 [schmonz]
 	o mpc-0.16
 	o mpeg4ip-1.6.1
@@ -980,6 +976,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o newt-0.52.2 (ubuntu)
 	o ng-1.4.4
 	o nikto-2.0.1
+	o nmap-5.00
 	o ns-3.5
 	o ns-flash-10
 	o ns-plugger-common-5.1.3
@@ -1009,6 +1006,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o openafs-1.4.11
 	o opencobol-1.0
 	o openh323-1.19.1
+	o openldap-client-2.4.17
 	o openmortal-0.7.1
 	o openmotif-2.3.2
 	o openmsx-0.7.0
@@ -1020,6 +1018,9 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o oto-0.5
 	o otpCalc-0.97
 	o p5-BerkeleyDB-0.39
+	o p5-DateTime-Set-0.28
+	o p5-Pod-Simple-3.08
+	o p5-Test-Manifest-1.23
 	o p5-ispman-1.2
 	o p5-sybperl-2.18
 	o p5-xmltv-0.5.55
@@ -1042,7 +1043,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o pear-Image_Graph-0.7.2
 	o pear-Log-1.9.6
 	o pear-Mail_Mime-1.5.2
-	o pear-Net_SMTP-1.3.2
+	o pear-Net_SMTP-1.3.3
 	o pear-Net_Sieve-1.1.5
 	o pear-Net_Socket-1.0.9
 	o pear-Net_URL-1.0.15
@@ -1078,7 +1079,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o plptools-0.13 [pkg/30244]
 	o plptools-1.0.8
 	o pngcheck-2.3.0
-	o pngcrush-1.6.20
+	o pngcrush-1.7.0
 	o po4a-0.29
 	o poedit-1.4.2
 	o polsms-2.1.0
@@ -1154,6 +1155,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ramaze-2009.01
 	o randread-0.2
 	o rapidsvn-0.10
+	o raptor-1.4.19
 	o rat-4.2.25
 	o rayshade-4.0.6
 	o rc-1.7.1 [at ftp://quenix2.dyndns.org/FreeBSD/ports/distfiles/]
@@ -1228,7 +1230,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o samba-3.3.6
 	o sane-backends-1.0.20
 	o sarg-2.2.5
-	o sbcl-1.0.29
+	o sbcl-1.0.30
 	o scamper-20070201
 	o scew-0.4.0
 	o sch-3.8.3
@@ -1240,12 +1242,10 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o scrollz-1.9.99
 	o scsh-1.3.0
 	o sdcc-2.9.0
-	o sdlmess-0.132
 	o seamonkey-1.17
 	o sendfile-20010424
 	o ser-0.9.6
 	o sessreg-1.0.4
-	o setxkbmap-1.1.0
 	o sharity-3.7
 	o sharity-light-1.3
 	o shc-3.8
@@ -1322,7 +1322,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o tfmxplay-1.1.6
 	o thin-1.0.0
 	o thoth-0.2.1
-	o thunderbird-2.0.0.22
 	o tig-0.14.1
 	o tile-0.7.4
 	o tinyproxy-1.7.0
@@ -1340,7 +1339,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o tpasm-1.2
 	o tpb-0.6.4
 	o trac-0.11.5
-	o transcode-1.1.2
+	o transcode-1.1.3
 	o trio-1.12
 	o tripwire-2.3.1 [see also pkg/22362]
 	o tsclient-0.140
@@ -1391,10 +1390,9 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o webmin-1.480
 	o websvn-2.0
 	o weewm-0.01
-	o wesnoth-1.6.4
 	o whohas-0.23
 	o windowlab-1.34
-	o wine-devel-1.1.24
+	o wine-devel-1.1.26
 	o wireshark-1.2.0
 	o wml-2.0.11
 	o wmnd-0.4.13
@@ -1453,10 +1451,9 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o xinput-1.4.2
 	o xisp-2.7p4
 	o xjman-0.7
-	o xkbcomp-1.1.0
 	o xkbset-0.5
 	o xli-2006.11.10
-	o xlog-2.0.2
+	o xlog-2.0.3
 	o xm7-1020s
 	o xmbdfed-4.6
 	o xmcd-3.3.2
@@ -1471,7 +1468,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o xmms-musepack-1.8.0 [http://dl.slik.org/musepack/xmms-musepack-1.8.0.tar.gz]
 	o xmmsctrl-1.8
 	o xmon-1.5.6
-	o xmp-2.7.0
+	o xmp-2.7.1
 	o xmule-1.12.2
 	o xnap-2.5r3
 	o xpad-2.13
@@ -1495,7 +1492,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o yacas-1.2.0
 	o yafc-1.1
 	o yasm-0.8.0
-	o yaz-3.0.46
+	o yaz-3.0.47
 	o yodl-2.14.3
 	o ysm-2.9.9.1
 	o yudit-2.9.0
