--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8270 2009/07/21 06:49:45 adam Exp $
+$NetBSD: TODO,v 1.8271 2009/07/21 20:12:43 abs Exp $
 
 Suggested new packages
 ======================
@@ -1437,7 +1437,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o xf86-video-savage-2.3.0
 	o xf86-video-siliconmotion-1.7.2
 	o xf86-video-sisusb-0.9.2
-	o xf86-video-tdfx-1.4.2
 	o xf86-video-trident-1.3.2
 	o xf86-video-tseng-1.2.2
 	o xf86-video-voodoo-1.2.2
