--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8272 2009/07/21 20:23:54 brook Exp $
+$NetBSD: TODO,v 1.8273 2009/07/21 20:42:08 tron Exp $
 
 Suggested new packages
 ======================
@@ -1391,7 +1391,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o whohas-0.23
 	o windowlab-1.34
 	o wine-devel-1.1.26
-	o wireshark-1.2.0
 	o wml-2.0.11
 	o wmnd-0.4.13
 	o wmweather-2.4.4
