--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8273 2009/07/21 20:42:08 tron Exp $
+$NetBSD: TODO,v 1.8274 2009/07/22 00:52:27 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -386,6 +386,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o anjuta-2.26.2.2 [GNOME 2.26]
 	o antiright-8.6
 	o ap-Embperl-1.3.6
+	o ap-auth-kerb-5.4
 	o ap-auth-mysql-4.3.9
 	o ap-auth-pam-1.1.1
 	o ap-dtcl-1.0.0
