--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8274 2009/07/22 00:52:27 schmonz Exp $
+$NetBSD: TODO,v 1.8275 2009/07/22 12:19:43 wiz Exp $
 
 Suggested new packages
 ======================
@@ -433,6 +433,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o awesome-3.3.1
 	o babl-0.1.0
 	o baci-20040415
+	o bacula-3.0.2
 	o balance-3.42
 	o bbdb-2.35
 	o bbkeys-0.9.0
@@ -459,6 +460,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o brasero-2.26.3
 	o bugzilla-3.2.4
 	o byacc-20080824
+	o bzr-1.17
 	o c4-1.10 [schmonz]
 	o cadaver-0.23.0
 	o cal3d-0.11.0
@@ -679,6 +681,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gnugo-3.8
 	o gnupg2-2.0.12
 	o gnustep-base-1.19.1
+	o gob2-2.0.16
 	o gobo-eiffel-3.3 [does not work with smarteiffel-2.0; perhaps 2.1?]
 	o gogo-3.11p1
 	o golem-0.0.6
@@ -755,7 +758,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ike-2.0.1 [pkg/37032]
 	o ikiwiki-3.14159 [schmonz]
 	o imapproxy-1.2.5 [see http://horde.org/imapproxy/ -> www.imapproxy.org]
-	o inputproto-1.9.99.14
+	o inputproto-1.9.99.15
 	o instiki-0.13
 	o intercal-0.24
 	o ircservices-5.1.18
@@ -790,6 +793,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o kadu-0.6.5
 	o kaffeine-0.8.7
 	o kapooka-0.3
+	o kchmviewer-4.1
 	o kdbg-2.1.1
 	o kde4-4.2.2
 	o kdevelop-3.5.4
@@ -806,7 +810,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o kronolith-2.3.1
 	o krusader-2.0
 	o ladspa-1.13
-	o lapack-3.2
+	o lapack-3.2.1
 	o latd-1.21
 	o latex2rtf-1.9.19
 	o lcc-4.2
@@ -814,8 +818,9 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o leafpad-0.8.15
 	o less-429
 	o lft-2.5 [at http://pwhois.org/]
-	o libXext-1.0.99.3
-	o libXi-1.2.99.2
+	o libXext-1.0.99.4
+	o libXi-1.2.99.3
+	o libXtst-1.0.99.1
 	o libarchive-2.7.0
 	o libast-0.7
 	o libcanberra-0.14
@@ -832,6 +837,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libextractor-0.5.23
 	o libflash-0.4.13
 	o libgda-4.0.2 [GNOME 2.26]
+	o libgee-0.1.6
 	o libggi-2.2.2
 	o libggigcp-1.0.2
 	o libggimisc-2.2.2
@@ -864,6 +870,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libxcb-1.4
 	o libxklavier-4.0
 	o licq-1.3.6
+	o liferea-1.6.0rc7
 	o lighttpd-1.4.23
 	o lincvs-2.1.3 [now called CrossVC]
 	o lmbench-2.5 [http://lmbench.sourceforge.net/]
@@ -953,7 +960,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o mysqlcc-0.9.8
 	o nagios-3.1.0
 	o nap-1.5.3
-	o nasm-2.06
+	o nasm-2.07
 	o nautilus-sendto-1.1.5
 	o navi2ch-1.8.1
 	o nawk-20071023
@@ -965,7 +972,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o nelma-3.1
 	o neon-0.28.5
 	o nessus-3.2.0
-	o netcdf-4.0
+	o netcdf-4.0.1
 	o netpbm-10.45.04
 	o netperf-2.4.4
 	o netpipe-3.6.2
@@ -1026,6 +1033,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o p5-xmltv-0.5.55
 	o packagekit-0.4.8
 	o pam-smbpass-3.0.13
+	o pango-1.24.5
 	o paprefs-0.9.8
 	o pari-2.3.3 [pkg/38116]
 	o pari-galdata-2.2 [pkg/38117]
@@ -1071,6 +1079,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o pinfo-0.6.9
 	o pioneers-0.12.2
 	o pircbot-1.4.4
+	o pixman-0.15.18
 	o pks-0.9.6
 	o plone-3.2.2 [should be plone-32?]
 	o ploticus-2.41
@@ -1148,6 +1157,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o qnetwalk-1.3
 	o qpopper-4.0.14
 	o qt3-qscintilla-2.4
+	o quagga-0.99.14
 	o qvplay-0.95
 	o radiance-3.7.2
 	o raine-0.51.3
@@ -1396,6 +1406,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o wmnd-0.4.13
 	o wmweather-2.4.4
 	o wmx-7
+	o wordpress-2.8.2
 	o worker-2.17.4
 	o wpa_gui-0.6.4 [pkg/39811]
 	o wpi-firmware-1.14.2
@@ -1420,7 +1431,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o xerces-c-2.9.0
 	o xerces-j-2.4.0 [pkg/21725]
 	o xerces-j-2.9.0
-	o xextproto-7.0.99.1
+	o xextproto-7.0.99.3
 	o xf86-video-amd-2.11.2 [now xf86-video-geode]
 	o xf86-video-cirrus-1.3.1
 	o xf86-video-dummy-0.3.2
@@ -1428,6 +1439,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o xf86-video-glint-1.2.3
 	o xf86-video-i128-1.3.2
 	o xf86-video-i740-1.3.1
+	o xf86-video-intel-2.8.0
 	o xf86-video-neomagic-1.2.3
 	o xf86-video-nv-2.1.14
 	o xf86-video-rendition-4.2.2
