--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13648 2014/09/10 09:39:11 wiz Exp $
+$NetBSD: TODO,v 1.13649 2014/09/13 10:42:18 shattered Exp $
 
 Suggested new packages
 ======================
@@ -704,7 +704,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o kde4-4.14
 	o kde4-4.13.2
 	o kdenlive-0.9.8
-	o kdrill-6.5
 	o kismet-2011.03r2 [pkg/45692]
 	o klavaro-3.0
 	o kmess-1.5.1
@@ -720,7 +719,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o lbdb-0.39
 	o lcc-4.2
 	o ldapsdk-6.0.7
-	o leafnode-1.11.8
 	o lftp-4.5.2
 	o lgeneral-1.2.3
 	o libAppleWM-1.4.1
@@ -772,7 +770,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o lottanzb-0.5.3
 	o lq-sp-1.3.4.13
 	o lsh-2.1
-	o ltris-1.0.19
 	o lwm-1.2.3
 	o lyx-2.1.0
 	o m17n-db-1.6.5 [icon location incompatible, fixed in upstream]
@@ -795,7 +792,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o metis-5.1.0
 	o mgetty+sendfax-1.1.35
 	o midori-0.5.8
-	o milkytracker-0.90.85
 	o mined-2014.24.2
 	o minicom-2.7
 	o minivmac-3.2.3
@@ -904,7 +900,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o polarssl-1.3.6
 	o policykit-0.104
 	o polsms-2.1.0
-	o popa3d-1.0.3
 	o poppass-4.0.14
 	o postal-0.72
 	o postgresql-postgis-2.1.0
