--- a/lang/openjdk7/patches/patch-langtools_make_build.xml
+++ b/lang/openjdk7/patches/patch-langtools_make_build.xml
@@ -1,8 +1,8 @@
-$NetBSD: patch-langtools_make_build.xml,v 1.1 2013/06/02 06:12:28 ryoon Exp $
+$NetBSD: patch-langtools_make_build.xml,v 1.2 2014/09/13 14:35:25 joerg Exp $
 
 * Avoid *.orig files.
 
---- langtools/make/build.xml.orig	2012-08-10 17:39:19.000000000 +0000
+--- langtools/make/build.xml.orig	2014-01-01 05:54:07.000000000 +0000
 +++ langtools/make/build.xml
 @@ -235,7 +235,8 @@
          </chmod>
@@ -14,7 +14,28 @@ $NetBSD: patch-langtools_make_build.xml,v 1.1 2013/06/02 06:12:28 ryoon Exp $
      </target>
  
      <target name="build-bootstrap-tools"
-@@ -804,6 +805,7 @@
+@@ -336,7 +337,10 @@
+             classpath="${dist.lib.dir}/javac.jar"
+             includeAntRuntime="no"
+             debug="${javac.debug}"
+-            debuglevel="${javac.debuglevel}"/>
++            debuglevel="${javac.debuglevel}">
++           <compilerarg value="-J-XX:+UseSerialGC"/>
++           <compilerarg value="-J-mx1024m"/>
++        </javac>
+         <java fork="true"
+             jvm="${target.java.home}/bin/java"
+             dir="test/tools/javac/diags"
+@@ -795,6 +799,8 @@
+                        debuglevel="${javac.debuglevel}">
+                     <compilerarg value="-implicit:none"/>
+                     <compilerarg value="-Xprefer:source"/>
++                    <compilerarg value="-J-XX:+UseSerialGC"/>
++                    <compilerarg value="-J-mx1024m"/>
+                     <compilerarg value="-J-Xbootclasspath/p:@{javac.bootclasspath}"/>
+                     <compilerarg line="@{bootclasspath.opt}"/>
+                     <compilerarg line="${javac.no.jdk.warnings}"/>
+@@ -804,6 +810,7 @@
                  <copy todir="@{classes.dir}" includeemptydirs="false">
                      <fileset dir="${src.classes.dir}" includes="@{includes}" excludes="@{excludes}">
                          <exclude name="**/*.java"/>
@@ -22,3 +43,24 @@ $NetBSD: patch-langtools_make_build.xml,v 1.1 2013/06/02 06:12:28 ryoon Exp $
                          <exclude name="**/*.properties"/>
                          <exclude name="**/*-template"/>
                          <exclude name="**/*.rej"/>
+@@ -857,7 +864,10 @@
+                srcdir="${make.tools.dir}/CompileProperties"
+                destdir="${build.toolclasses.dir}/"
+                classpath="${ant.core.lib}"
+-               includeantruntime="false"/>
++               includeantruntime="false">
++          <compilerarg value="-J-XX:+UseSerialGC"/>
++          <compilerarg value="-J-mx1024m"/>
++        </javac>
+         <taskdef name="pcompile"
+                  classname="CompilePropertiesTask"
+                  classpath="${build.toolclasses.dir}/"/>
+@@ -874,6 +884,8 @@
+                classpath="${ant.core.lib}"
+                includeantruntime="false">
+             <compilerarg value="-Xbootclasspath/p:${build.bootstrap.dir}/classes"/>
++            <compilerarg value="-J-XX:+UseSerialGC"/>
++            <compilerarg value="-J-mx1024m"/>
+         </javac>
+         <taskdef name="genstubs"
+                  classname="GenStubs$$Ant"
