--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13652 2014/09/14 13:59:35 shattered Exp $
+$NetBSD: TODO,v 1.13653 2014/09/14 15:03:58 wiz Exp $
 
 Suggested new packages
 ======================
@@ -459,6 +459,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o crossfire-client-gtk2-1.60.0
 	o cssc-1.4.0
 	o cuisine-0.6.5
+	o curl-7.38.0
 	o cvs-fast-export-1.11
 	o cvs2p4-2.5.5 [schmonz]
 	o cwm-5.1
@@ -480,6 +481,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o delegate-9.9.9
 	o denemo-1.1.8
 	o dhid-5.3
+	o dialog-1.2.20140911
 	o digikam-4.0
 	o doclifter-2.15
 	o dolphin-4.0.2
@@ -737,6 +739,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libgnome-keyring-3.12.0
 	o libgnomedb-3.1.2
 	o libgnomekbd-3.4.0.2
+	o libgpg-error-1.15
 	o libixp-0.5 [breaks wmii-3.6, wait for compatible version; see also wmii+ixp entry]
 	o libjit-1.0.2
 	o libmcs-0.7.2
@@ -817,6 +820,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o munin-node-1.4.6
 	o munin-server-1.4.6
 	o muse-0.9.2
+	o musicpd-0.18.14
 	o mypaint-1.1.0
 	o nano-2.3.2
 	o nap-1.5.3
@@ -922,7 +926,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-beets-1.3.6
 	o py-biggles-1.6.6
 	o py-cassa-1.11.0
+	o py-cherrypy-3.6.0
+	o py-click-3.3
 	o py-creole-1.1.1
+	o py-cython-0.21
 	o py-datapkg-0.9
 	o py-django-1.7
 	o py-django-photologue-2.7
@@ -934,8 +941,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-greenlet-0.4.2
 	o py-hgtools-4.0
 	o py-lasso-2.4.0
+	o py-ldap-2.4.16
 	o py-logilab-astng-0.24.3
 	o py-logilab-common-0.60.1
+	o py-lxml-3.4.0
 	o py-markdown-2.3.1
 	o py-mezzanine-3.0.5
 	o py-musicbrainz-0.7.4
@@ -951,13 +960,17 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-rope-0.9.4
 	o py-scgi-1.14
 	o py-simpletal-5.1
+	o py-six-1.8.0
 	o py-smb-1.1.8
+	o py-sphinx-1.2.3
 	o py-sphinx-theme-cloud-1.6
 	o py-suds-0.4.1
 	o py-sybase-0.37
 	o py-tlslite-0.4.6
+	o py-tornado-4.0.2
 	o py-wxWidgets-3.0.0
 	o py-zconfig-3.0.3
+	o qemu-2.1.1
 	o qnetwalk-1.4
 	o qt5-qtbase-5.3.1
 	o radiance-3.7.2
@@ -1140,7 +1153,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o wwwoffle-2.9i
 	o wxRemind-101
 	o wyrd-1.4.6
-	o x264-devel-20140906
+	o x264-devel-20140913
 	o xbindkeys-1.8.6
 	o xbindkeys-tk-1.8.0
 	o xboard-4.7.0
