--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13666 2014/09/14 17:58:59 wiz Exp $
+$NetBSD: TODO,v 1.13667 2014/09/15 14:05:13 gdt Exp $
 
 Suggested new packages
 ======================
@@ -901,7 +901,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o polsms-2.1.0
 	o poppass-4.0.14
 	o postal-0.72
-	o postgresql-postgis-2.1.0
 	o powermanga-0.91
 	o powwow-1.2.16
 	o ppp-2.4.6
