--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13667 2014/09/15 14:05:13 gdt Exp $
+$NetBSD: TODO,v 1.13668 2014/09/15 17:31:33 wiz Exp $
 
 Suggested new packages
 ======================
@@ -553,6 +553,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ftplibpp-2.0.2
 	o fuse-archivemount-0.6.1
 	o fuse-encfs-1.5.2
+	o fuse-mp3fs-0.91
 	o fvwm2-themes-0.7.0
 	o galculator-2.1.3
 	o gallery3-3.0.2
