--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13668 2014/09/15 17:31:33 wiz Exp $
+$NetBSD: TODO,v 1.13669 2014/09/15 17:33:56 wiz Exp $
 
 Suggested new packages
 ======================
@@ -751,6 +751,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libraw-0.16.0
 	o libreoffice4-4.3.1
 	o libreoffice4-bin-4.3
+	o libsigc++-2.4.0
 	o libstree-0.4.3pre2 [pkg/43748]
 	o libtar-1.2.20
 	o libtcl-nothread-8.5.1
