--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.13670 2014/09/18 16:08:35 wiz Exp $
+$NetBSD: TODO,v 1.13671 2014/09/20 23:26:50 dholland Exp $
 
 Suggested new packages
 ======================
@@ -833,7 +833,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o newmail-1.0.2
 	o nginx-devel-1.7.0
 	o nikto-2.0.1
-	o nmh-1.6 [pkg/49166]
 	o ns-3.14.1
 	o ns-plugger-common-5.1.3
 	o nspluginwrapper-1.4.4 [pkg/47208]
