--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17416 2017/06/14 12:32:05 wiz Exp $
+$NetBSD: TODO,v 1.17417 2017/06/14 12:59:25 fhajny Exp $
 
 Suggested new packages
 ======================
@@ -1120,7 +1120,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o netramet-50
 	o newmail-1.0.2
 	o ng-spice-26
-	o nodejs-8.1.0
 	o notmuch-0.24.2
 	o npth-1.5
 	o nqp-2016.02
